clusters/armadillo/istio/traffic-management/local/armadillo-services.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-httpbin-chaos-routing
spec:
  hosts:
    - httpbin.default.svc.cluster.local
  gateways:
    - mesh
    - istio-system/armadillo-external-ingressgateway
    # - istio-system/armadillo-multicluster-ingressgateway
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /status/418
      route:
        - destination:
            host: httpbin.default.svc.cluster.local
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-color-svc-routing
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/armadillo-external-ingressgateway
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc-only-blue.armadillo-offerings.svc.cluster.local
            port:
              number: 8800
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
