clusters/armadillo/istio/traffic-management/local/color-svc.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: armadillo-color-svc
  namespace: armadillo-offerings
spec:
  host: color-svc.armadillo-offerings.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    connectionPool:
      http:
        maxRequestsPerConnection: 2
        http1MaxPendingRequests: 2
        http2MaxRequests: 2
        idleTimeout: 30s

      tcp:
        maxConnections: 10
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-color-svc-routing
  namespace: armadillo-offerings
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/armadillo-external-ingressgateway
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.armadillo-offerings.svc.cluster.local
            port:
              number: 8800
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
    - match:
        - uri:
            prefix: /armadillo
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.armadillo-offerings.svc.cluster.local
            port:
              number: 8800
    - match:
        - uri:
            prefix: /bison
      rewrite:
        uri: /random
      route:
        - destination:
            host: color-svc.bison-offerings.global
            port:
              number: 8800
