clusters/armadillo/istio/traffic-management/local/httpbin.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-httpbin-chaos-routing
spec:
  hosts:
    - httpbin.default.svc.cluster.local
  gateways:
    - mesh
    - istio-system/armadillo-external-ingressgateway
  http:
    - match:
        - uri:
            prefix: /chaos
      rewrite:
        uri: /status/418
      route:
        - destination:
            host: httpbin.armadillo-offerings.svc.cluster.local
      fault:
        abort:
          percentage:
            value: 50
          httpStatus: 400
