clusters/armadillo/istio/traffic-management/local/observability-tools.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-grafana-routing
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/armadillo-management-ingressgateway
  http:
    - match:
        - port: 80
          uri:
            prefix: /grafana/
      rewrite:
        uri: /
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-kiali-routing
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/armadillo-management-ingressgateway
  http:
    - match:
        - port: 80
          uri:
            prefix: /kiali/
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: armadillo-jaeger-routing
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/armadillo-management-ingressgateway
  http:
    - match:
        - port: 80
          uri:
            prefix: /jaeger/
      route:
        - destination:
            host: jaeger-query.istio-system.svc.cluster.local
            port:
              number: 16686
